:iphone: Tweaking responsive design

--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Meta Description -->
+    <meta name="description"
+        content="Fern and Fawn Lactation is a lactation consultancy business based in Rossland, BC. Owned and operated by Michelle Coish, Fern and Fawn aims to assist new families with their breastfeeding needs, and serves the Kootenays of British Columbia in person, and all of Canada remotely.">
+
+    <!-- Meta Keywords (Optional) -->
+    <meta name="keywords"
+        content="lactation, breastfeeding, Rossland, Kootenays, early childhood, lactation support, maternity">
+
+    <!-- Canonical Tag -->
+    <link rel="canonical" href="https://www.fernandfawnlactation.ca">
+
+    <!-- Open Graph Tags (for Social Sharing) -->
+    <meta property="og:title" content="Fern and Fawn Lactation">
+    <meta property="og:description"
+        content="Fern and Fawn Lactation is a lactation consultancy business based in Rossland, BC. Owned and operated by Michelle Coish, Fern and Fawn aims to assist new families with their breastfeeding needs, and serves the Kootenays of British Columbia in person, and all of Canada remotely.">
+    <meta property="og:image" content="https://www.fernandfawnlactation.ca/path-to-image.jpg">
+    <meta property="og:url" content="https://fernandfawnlactation.ca">
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Fern and Fawn Lactation">
+    <meta name="twitter:description"
+        content="Fern and Fawn Lactation is a lactation consultancy business based in Rossland, BC. Owned and operated by Michelle Coish, Fern and Fawn aims to assist new families with their breastfeeding needs, and serves the Kootenays of British Columbia in person, and all of Canada remotely.">
+    <meta name="twitter:image" content="https://www.fernandfawnlactation.ca/path-to-image.jpg">
+
+    <!-- Robots Meta Tag -->
+    <meta name="robots" content="index, follow">
+
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
@@ -24,6 +52,7 @@
     <header>
         <a href="#hero">
             <img src="assets/logo.png" alt="Fern and Fawn Lactation Logo">
+            <h1 class="title">Fern and Fawn Lactation</h1>
         </a>
         <a class="nav__contact-link" href="#contact">Get In Touch</a>
     </header>
@@ -34,8 +63,8 @@
             <div class="hero__text">
                 <h2>International Board-Certified Lactation Consultation</h2>
                 <p>Comprehensive lactation support locally in the West Kootenays, BC and virtually across Canada.</p>
-                <button class="button button-primary" onclick="window.location.href='#contact'">Book a
-                    Consultation</button>
+                <a href="https://fernandfawnlactation.janeapp.com/" class="button button-primary">Book a
+                    Consultation</a>
             </div>
         </section>
         <section id="about">
@@ -48,8 +77,8 @@
                     <li>Tailoring evidence-based strategies to your needs.</li>
                     <li>Helping you feel confident in navigating challenges.</li>
                 </ul>
-                <button class="button button-secondary" onclick="window.location.href='#contact'">Let’s work
-                    together</button>
+                <a href="https://fernandfawnlactation.janeapp.com/" class="button button-secondary">Let’s work
+                    together</a>
             </div>
             <div class="about__image">
                 <img src="/assets/about-image.png" alt="Photo of Michelle.">
