:bento: Added open graph image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Fern and Fawn Lactation">
     <meta property="og:description"
         content="Fern and Fawn Lactation is a lactation consultancy business based in Rossland, BC. Owned and operated by Michelle Coish, Fern and Fawn aims to assist new families with their breastfeeding needs, and serves the Kootenays of British Columbia in person, and all of Canada remotely.">
-    <meta property="og:image" content="https://www.fernandfawnlactation.ca/path-to-image.jpg">
+    <meta property="og:image" content="https://www.fernandfawnlactation.ca/assets/social-image.jpg">
     <meta property="og:url" content="https://fernandfawnlactation.ca">
 
     <!-- Twitter Card Tags -->
@@ -28,7 +28,7 @@
     <meta name="twitter:title" content="Fern and Fawn Lactation">
     <meta name="twitter:description"
         content="Fern and Fawn Lactation is a lactation consultancy business based in Rossland, BC. Owned and operated by Michelle Coish, Fern and Fawn aims to assist new families with their breastfeeding needs, and serves the Kootenays of British Columbia in person, and all of Canada remotely.">
-    <meta name="twitter:image" content="https://www.fernandfawnlactation.ca/path-to-image.jpg">
+    <meta name="twitter:image" content="https://www.fernandfawnlactation.ca/assets/social-image.jpg">
 
     <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow">
