:children_crossing: Links open in new tab

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="hero__text">
                 <h2>International Board-Certified Lactation Consultation</h2>
                 <p>Comprehensive lactation support locally in the West Kootenays, BC and virtually across Canada.</p>
-                <a href="https://fernandfawnlactation.janeapp.com/" class="button button-primary">Book a
+                <a href="https://fernandfawnlactation.janeapp.com/" target="_blank" class="button button-primary">Book a
                     Consultation</a>
             </div>
         </section>
@@ -77,7 +77,8 @@
                     <li>Tailoring evidence-based strategies to your needs.</li>
                     <li>Helping you feel confident in navigating challenges.</li>
                 </ul>
-                <a href="https://fernandfawnlactation.janeapp.com/" class="button button-secondary">Let’s work
+                <a href="https://fernandfawnlactation.janeapp.com/" target="_blank"
+                    class="button button-secondary">Let’s work
                     together</a>
             </div>
             <div class="about__image">
