:wrench: Added form backend

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <form action="" method="post">
+            <form action="https://formbold.com/s/94plX" method="post">
                 <div class="contact__form-names">
                     <div>
                         <label for="fname">First Name*</label>
